--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,29 +1,26 @@
-   yaml
-   name: Pylint with Custom Rules
+name: Python Linter
 
-   on:
-     pull_request:
-       branches:
-         - main
+on: push
 
-   jobs:
-     lint:
-       runs-on: ubuntu-latest
+jobs:
+  lint:
+    runs-on: ubuntu-latest
 
-       steps:
-       - name: Checkout code
-         uses: actions/checkout@v2
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-       - name: Set up Python
-         uses: actions/setup-python@v2
-         with:
-           python-version: 3.x
+      - name: Install Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.7
 
-       - name: Install Pylint
-         run: pip install pylint
+      - name: Install Linter
+        run: pip install pylint
 
-       - name: Install Custom Pylint Plugin
-         run: pip install git+https://github.com/your-username/mypylintproject.git
+      - name: run linter
+        run: pylint your_python_script.py
 
-       - name: Run Pylint with Custom Rules
-         run: pylint --load-plugins mypylintplugin mymodule
+      - name: Lint code
+        run: pylint .
+        
